// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowsheetDataGrid renders the row header column as pinned and remaining columns as overflow, all columns as not resizable or selectable and all row cells as selectable 1`] = `
<div
  className="flowsheet-data-grid-container"
  onKeyUp={[Function]}
>
  <ForwardRef
    ariaLabel="Test Flowsheet Data Grid"
    columnHeaderHeight="2.5rem"
    columnHighlightColor="orange"
    defaultColumnWidth={200}
    hasVisibleColumnHeaders={true}
    id="test-terra-flowsheet-data-grid"
    onCellRangeSelect={[Function]}
    onCellSelect={[Function]}
    overflowColumns={
      Array [
        Object {
          "displayName": "March 16",
          "id": "Column-1",
          "isResizable": false,
          "isSelectable": false,
        },
        Object {
          "displayName": "March 17",
          "id": "Column-2",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    pinnedColumns={
      Array [
        Object {
          "displayName": "Vitals",
          "id": "Column-0",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    rowHeaderIndex={0}
    rowHeight="2.5rem"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "content": "Heart Rate Monitored (bpm)",
              "isSelectable": true,
            },
            Object {
              "content": "65",
              "isSelectable": true,
            },
            Object {
              "content": "66",
              "isSelectable": true,
            },
          ],
          "id": "1",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Temperature Oral (degC)",
              "isSelectable": true,
            },
            Object {
              "content": "36.7",
              "isSelectable": true,
            },
            Object {
              "content": "36.9",
              "isSelectable": true,
            },
          ],
          "id": "2",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Cardiac Index (L/min/m2)",
              "isSelectable": true,
            },
            Object {
              "content": "2.25",
              "isSelectable": true,
            },
            Object {
              "content": "2.28",
              "isSelectable": true,
            },
          ],
          "id": "3",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Oxygen Flow Rate (L/min)",
              "isSelectable": true,
            },
            Object {
              "content": "63",
              "isSelectable": true,
            },
            Object {
              "content": "47",
              "isSelectable": true,
            },
          ],
          "id": "4",
        },
      ]
    }
    sections={null}
  />
  <VisuallyHiddenText
    aria-live="polite"
    text={null}
  />
</div>
`;

exports[`FlowsheetDataGrid replaces non-header empty, null, or "--" cell contents with a "No results" visual indicator and hidden text 1`] = `
<div
  className="flowsheet-data-grid-container"
  onKeyUp={[Function]}
>
  <ForwardRef
    ariaLabel="Test Flowsheet Data Grid"
    columnHeaderHeight="2.5rem"
    columnHighlightColor="orange"
    defaultColumnWidth={200}
    hasVisibleColumnHeaders={true}
    id="test-terra-flowsheet-data-grid"
    onCellRangeSelect={[Function]}
    onCellSelect={[Function]}
    overflowColumns={
      Array [
        Object {
          "displayName": "March 16",
          "id": "Column-1",
          "isResizable": false,
          "isSelectable": false,
        },
        Object {
          "displayName": "March 17",
          "id": "Column-2",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    pinnedColumns={
      Array [
        Object {
          "displayName": "Vitals",
          "id": "Column-0",
          "isResizable": false,
          "isSelectable": false,
        },
      ]
    }
    rowHeaderIndex={0}
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "content": "Heart Rate Monitored (bpm)",
              "isSelectable": true,
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
            Object {
              "content": "66",
              "isSelectable": true,
            },
          ],
          "id": "1",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Temperature Oral (degC)",
              "isSelectable": true,
            },
            Object {
              "content": "36.7",
              "isSelectable": true,
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
          ],
          "id": "2",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Cardiac Index (L/min/m2)",
              "isSelectable": true,
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
            Object {
              "content": "2.28",
              "isSelectable": true,
            },
          ],
          "id": "3",
        },
        Object {
          "cells": Array [
            Object {
              "content": "",
              "isSelectable": true,
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
              "isSelectable": true,
            },
          ],
          "id": "4",
        },
      ]
    }
    sections={null}
  />
  <VisuallyHiddenText
    aria-live="polite"
    text={null}
  />
</div>
`;
